added default case

--- a/javascript-language-features/switch-statements.html
+++ b/javascript-language-features/switch-statements.html
@@ -29,6 +29,8 @@
           break;
         case "60614":
           town = "Lincoln Park";
+        default:
+          town = "No Match";
       }
       document.getElementById("output").innerHTML = "Town: " + town;
     }
