adding options and checkbox

--- a/interact-with-html-forms/creating-forms.html
+++ b/interact-with-html-forms/creating-forms.html
@@ -20,6 +20,40 @@
             maxlength="15"
         /></label>
       </p>
+      <fieldset>
+        <legend>Pizza Size</legend>
+        <p>
+          <label>
+            <input type="radio" name="size" value="small" />Small (10
+            Inch)</label
+          >
+          <input type="radio" name="size" value="medium" />Medium (12
+            Inch)</label>
+            <input type="radio" name="size" value="large" />Large (14
+            Inch)</label>
+        </p>
+      </fieldset>
+
+      <fieldset>
+          <legend>Pizza Toppings</legend>
+        <p><label> <input type="checkbox" name="toppings" value="Bacon"> Bacon </label></p>
+        <p><label> <input type="checkbox" name="toppings" value="Cheese">Extra Cheese</label></p>
+        <p><label> <input type="checkbox" name="toppings" value="Pepperoni"> Some Roni</label></p>
+        <p><label> <input type="checkbox" name="toppings" value="Mushrooms">Musshrooms</label></p>
+        <p><label> <input type="checkbox" name="toppings" value="Peppers">Peppers</label></p>
+
+    </fieldset>
+
+    <fieldset>
+        <p>Crust
+<select name="crust">
+<option value="c1">Normal</option>
+<option value="c2">Deep Dish (+ $2)</option>
+<option value="c3">Thin Crust</option>
+</select>
+        </p>
+      
+  </fieldset>
     </form>
   </body>
 
