--- a/interact-with-html-forms/scrathchs-final-mock.html
+++ b/interact-with-html-forms/scrathchs-final-mock.html
@@ -47,10 +47,10 @@ console.log(typeof strawberry);
     // let result = (i <= h++) || (--z >= i);
     // console.log(result);
 
-//     let a = 10;
-//     let b = 20;
-//     let c = 30;
-//     let mod = a%b%c;
+//     let h = 10;
+//     let bb = 20;
+//     let cc = 30;
+//     let mod = cc%bb%h;
 //   alert(mod);
 
     // alert(isNaN(0/0))
